# adventofcode

./: .clang-format  .gitignore  CMakeLists.txt
2015/: CMakeLists.txt
2015/aoc2015/: CMakeLists.txt
2015/aoc2015/include/aoc2015/: dynamic_array.h  string.h
2015/aoc2015/lib/aoc2015/: dynamic_array.c  error_handling.c  string.c
2015/day01/: CMakeLists.txt  main.c
2015/day02/: CMakeLists.txt
2015/day03/: CMakeLists.txt  main.c
2021/: ChangeLog.md  README.md  aoc2021.cabal  aoc20221.cabal  package.yaml
2021/lib/: Iterables.hs
2021/src/: Day01.hs
2021/src/day01/: Main.hs
2021/src/day02/: Main.hs
2021/src/day03/: Main.hs
2021/src/day04/: Main.hs
aoc2015/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  aoc2015.cabal
aoc2015/include/aoc2015/: error_handling.h
aoc2015/lib/: Parsing.hs
aoc2015/lib/aoc2015/: error_handling.c
aoc2015/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs
aoc2022/: Cargo.toml
aoc2022/src/day01/: main.rs
aoc2022/src/day02/: main.rs
aoc2022/src/day03/: main.rs
aoc2022/src/day04/: main.rs
aoc2023/src/: day01.rs  day02.rs
day01/: CMakeLists.txt
day02/: main.c
