name:                aoc2015
version:             0.1.0.0
synopsis: Solutions to Advent of Code 2015
homepage:            https://github.com/githubuser/aoc2015#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Yenamandra
maintainer:          v@calloc.net
copyright:           2022 Vaibhav Yenamandra
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable d01
  hs-source-dirs:      src
  main-is:             Day01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
