name:                aoc2015
version:             0.1.0.0
synopsis: Solutions to Advent of Code 2015
homepage:            https://github.com/githubuser/aoc2015#readme
license:             BSD3
license-file:        LICENSE
author:              Vaibhav Yenamandra
maintainer:          v@calloc.net
copyright:           2022 Vaibhav Yenamandra
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:
    Parsing
  build-depends:       base >= 4.7 && < 5

executable d01
  hs-source-dirs:      src
  main-is:             Day01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable d02
  hs-source-dirs:      src
  main-is:             Day02.hs
  default-language:    Haskell2010
  build-depends:       aoc2015, base >= 4.7 && < 5

executable d03
  hs-source-dirs:      src
  main-is:             Day03.hs
  default-language:    Haskell2010
  build-depends:       aoc2015, base >= 4.7 && < 5

executable d04
  hs-source-dirs:      src
  main-is:             Day04.hs
  default-language:    Haskell2010
  build-depends:       aoc2015
                     , base >= 4.7 && < 5
                     , bytestring
                     , utf8-string
                     , cryptohash-md5

executable d05
  hs-source-dirs:      src
  main-is:             Day05.hs
  default-language:    Haskell2010
  build-depends:       aoc2015, base >= 4.7 && < 5

executable d06
  hs-source-dirs:      src
  main-is:             Day06.hs
  default-language:    Haskell2010
  build-depends:       aoc2015
                     , base >= 4.7 && < 5
                     , containers
